--- a/calculator_backbone_app/calculator_app.css
+++ b/calculator_backbone_app/calculator_app.css
@@ -1,30 +1,34 @@
 #app{
-	width: 180px;
-	margin: 100px auto 0 auto;
+    width: 180px;
+    margin: 100px auto 0 auto;
+}
+
+#screen{
+    text-align: right;
 }
 
 #keyboard-left {
-	float: left;
+    float: left;
 }
 
 #b00{
-	width: 55px;
+    width: 55px;
 }
 
 #keyboard-right{
-	float: left;
+    float: left;
 }
 
 #plus-div{
-	height: 50px;
-	float: left;
+    height: 50px;
+    float: left;
 }
 
 #b-plus{
-	height: 50px;
+    height: 50px;
 }
 
 #equal-div{
-	float: left;
-	width: 50px;
+    float: left;
+    width: 50px;
 }
